HelloUltraviolet/Fixtures/RejectedSource/FFI/UnwindCatchABIMismatch/Expected.uv
//! Expected diagnostic metadata for the UnwindCatchABIMismatch rejected-source specimen.

expectedDiagnostic("E-SYS-3355", "requirement.23.UnwindCatchAbiRequirement")
